Bulk of CSS style and HTML complete

--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+   <div class = "div0">
+   PUERTO RICO AIRLINES
+   <div class = "inner-box1">HOME</div>
+   <div class = "inner-box2">FLIGHTS</div>
+   <div class = "inner-box3">SUPPORT</div>
+   <div class = "inner-box4">LOGIN</div>
+  </div>
 
+
+   <div class = "div1">
+   <h1>Flights</h1>
+     <p>
+   Come check out our sweet flights! Direct flights available daily!
+   </p>
+    <div class = "inner-box">Let's Go</div>
+   </div>
+
+   <div class = "div2">Group Trips
+    <div class = "inner-box"> Group Rates </div>
+   </div>
+
+   <div class = "div3">Discount Flights
+    <div class = "inner-box"> Jump In </div>
+   </div>
+
+   <div class = "div4">About Us
+    <div class ="inner-box"> Learn More </div>
+   </div>
   </body>
 </html>
