Needs cleaning up but looks okay

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
 
-   <div class = "div1">
+   <div class = "outer-box1">
    <h1>Flights</h1>
      <p>
    Come check out our sweet flights! Direct flights available daily!
@@ -23,15 +23,21 @@
     <div class = "inner-box">Let's Go</div>
    </div>
 
-   <div class = "div2">Group Trips
+   <div class = "outer-box2">
+    <h2>Group Trips</h2>
+     <p>We offer great group rates! For families with 4 members to huge gatherings with 50+!</p>
     <div class = "inner-box"> Group Rates </div>
    </div>
 
-   <div class = "div3">Discount Flights
+   <div class = "outer-box3">
+    <h3>Discount Flights</h3>
+    <p>Discount Flights available for individuals! Single Chair filler tickets for low rates!</p>
     <div class = "inner-box"> Jump In </div>
    </div>
 
-   <div class = "div4">About Us
+   <div class = "outer-box4">
+    <h4>About Us</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <div class ="inner-box"> Learn More </div>
    </div>
   </body>
